# japanese-practice-mcp

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/plans/: 2026-05-21-japanese-practice-mcp.md  2026-05-21-v0.2-conversational-overhaul.md
seed/: bunpro_deck_index.json
src/japanese_practice_mcp/: __main__.py  audit.py  config.py  db.py  migrations.py  paths.py  practice.py  resolve.py  seed.py  server.py  wanikani.py
src/japanese_practice_mcp/tools/: bulk.py  calibration.py  grammar.py  logs.py  overrides.py  priority.py  sampling.py  status.py  vocabulary.py
tests/: conftest.py  test_audit.py  test_bulk.py  test_calibration.py  test_config.py  test_db.py  test_grammar.py  test_logs.py  test_migrations.py  test_overrides.py  test_practice.py  test_priority.py  test_resolve.py  test_sampling.py  test_seed.py  test_status.py  test_vocabulary.py  test_wanikani.py
tests/fixtures/: wk_assignments_page1.json  wk_subjects_page1.json  wk_subjects_page2.json
