[project]
name = "japanese-practice-mcp"
version = "0.2.0"
description = "Local MCP server exposing my Japanese learning data to Claude clients for production practice."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "orca" }]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27",
    "platformdirs>=4.2",
]

[project.scripts]
japanese-practice-mcp = "japanese_practice_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/japanese_practice_mcp"]

[tool.hatch.build]
include = ["src/japanese_practice_mcp/**", "seed/**"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-httpx>=0.30",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
